deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openidaas
  labels:
    name: openidaas
    environment: production
